--- a/foundations/intro-to-css/05-descendant-combinator/style.css
+++ b/foundations/intro-to-css/05-descendant-combinator/style.css
@@ -1,1 +1,7 @@
-/* Add CSS Styling */
+.container .text{
+  font-family: Arial, sans-serif;
+  font-size: 20px;
+  color: red;
+  background-color: yellow;
+  text-align: center;
+}
